service.yaml
apiVersion: v1
kind: Service
metadata:
  name: timecheck-service
  labels:
    app: timecheck
spec:
  selector:
    app: timecheck
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
